[package]
name = "untitled_text_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
clearscreen = "1.0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.release.package."*"]
codegen-units = 1
opt-level = "s"